# rules_sqlc

./: BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.github/workflows/: BUILD.bazel  tag.yaml
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod
e2e/smoke/go-sqlite/: BUILD  main.go
e2e/smoke/go-sqlite/db/: BUILD
e2e/smoke/go-sqlite/db_with_interfaces/: BUILD  empty.go
sqlc/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
sqlc/private/: BUILD.bazel  resolved_toolchain.bzl  sqlc_config.bzl  sqlc_generate.bzl  toolchains_repo.bzl  versions.bzl
sqlc/private/gazelle/: BUILD.bazel
sqlc/tests/: versions_test.bzl
