bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")

bazel_dep(name = "rules_sqlc", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_sqlc",
    path = "../..",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.4")
