# Override http_archive for local testing
local_repository(
    name = "rules_sqlc",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_sqlc setup #
######################
# Fetches the rules_sqlc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_sqlc//sqlc:repositories.bzl", "rules_sqlc_dependencies")

rules_sqlc_dependencies()
