# Override http_archive for local testing
local_repository(
    name = "rules_sqlc",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_sqlc setup #
######################
# Fetches the rules_sqlc dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_sqlc//sqlc:repositories.bzl", "rules_sqlc_dependencies", "sqlc_register_toolchains")

rules_sqlc_dependencies()

sqlc_register_toolchains(
    name = "sqlc",
    sqlc_version = "1.31.1",
)

######################
# rules_go setup #
######################
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "763f4a3f6b03469fdb00a77a333dd0b5546d3ee1fa29db373128c08fee73e0e8",
    urls = ["https://github.com/bazel-contrib/rules_go/releases/download/v0.61.1/rules_go-v0.61.1.zip"],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.24.4")
